# NeuroOntoGen

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: README.md  run_benchmark.py
docs/: DEVELOPMENT_ROADMAP.md  PRD.md  TECHNICAL_ARCHITECTURE.md
examples/company/: README.md  invalid_abox.ttl  valid_abox.ttl
notebooks/: end_to_end_demo.ipynb
schemas/: company_schema.yaml
src/neuro_onto_gen/: __init__.py  cli.py
src/neuro_onto_gen/clustering/: __init__.py  discovery.py
src/neuro_onto_gen/core/: __init__.py  extraction.py  models.py  owl_reasoner.py  prompting.py  repair.py  serializer.py  validation.py
src/neuro_onto_gen/evaluation/: __init__.py  metrics.py  prompt_stability.py
src/neuro_onto_gen/graph/: __init__.py  repository.py
tests/: test_anthropic_provider.py  test_benchmark_runner.py  test_ci_workflow.py  test_cli.py  test_cluster_naming.py  test_clustering_discovery.py  test_clustering_production_adapters.py  test_company_schema_scale.py  test_core_models.py  test_core_serializer.py  test_deepseek_provider.py  test_evaluation_metrics.py  test_examples.py  test_extraction.py  test_graph_repository.py  test_llm_repairer.py  test_local_model_provider.py  test_notebook_demo.py  test_openai_compatible_provider.py  test_owl_reasoner.py  test_owl_repair_diagnostics.py  test_package_import.py  test_prompt_builder.py  test_prompt_stability.py  test_repair_controller.py  test_schema_compiler.py  test_shacl_validation.py  test_sparql_endpoint_repository.py  test_xiaomi_mimo_provider.py
(+8 files in other folders)
